fixed tech stack section issue with text align center

--- a/src/App.css
+++ b/src/App.css
@@ -699,6 +699,7 @@ html, body{
     .tech-container{
       width: 70%;
       margin: 15% auto 18% auto;
+      text-align: center;
     }
     /*
           PROJECTS
@@ -842,6 +843,7 @@ html, body{
         .tech-container{
           width: 75%;
           margin: 15% auto 0 auto;
+          text-align: center;
         }
       
         /*
@@ -981,6 +983,7 @@ html, body{
       .intro{
         padding:0 8%;
         width: 95%;
+        text-align: center;
       }
     
       .stack-header{
@@ -991,6 +994,12 @@ html, body{
         border-color: rgb(241, 240, 240);
         width: 100%;
         margin-top: 20%
+      }
+
+      .express{
+        height: 35%;
+        width: 35%;
+        margin-bottom: -7%;
       }
     
       /*
@@ -1087,6 +1096,10 @@ html, body{
         font-size: 19px;
         max-width: 85%;
         margin-top: 20%;
+      }
+
+      .express{
+        margin-bottom: -6%;
       }
 
       .projects-header{
